--- a/api-gouv.yml
+++ b/api-gouv.yml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
-  title: API GOUV
-  description: Catalogue des API du gouvernement
+  title: api.gouv.fr
+  description: Catalogue des API des administrations françaises
   version: 0.1.0
 basePath: /
 produces:
@@ -9,7 +9,7 @@ produces:
 paths:
   /api.json:
     get:
-      summary: récupérer la liste des API listées sur api.gouv.fr
+      summary: Récupérer la liste des API listées sur api.gouv.fr
       responses:
         '200':
           description: La liste des API
